Adding .html and .gitignore

--- a/secondPage.html
+++ b/secondPage.html
@@ -7,12 +7,9 @@
 	</head>
 	
 	<body>
-		<header>
-			<h1> Welcome!</h1>
-			<a href="secondPage.html"> Second Page </a>
-		</header>
-		
-		<!-- page content -->
+		<h1>Second Page</h1>
+		<a href="index.html"> Main Page </a>
+
 		
 	</body>
 
