Initial CSS formatting and html additions

--- a/index.html
+++ b/index.html
@@ -3,16 +3,32 @@
 
 	<head>
 		<meta charset="utf-8">
+		<link rel="sytlesheet" type="text/css" href="style.css" />
 		<title> Sean Murphy </title>
 	</head>
 	
 	<body>
 		<header>
-			<h1> Welcome!</h1>
-			<a href="secondPage.html"> Second Page </a>
+			<h1>Sean Murphy's Personal Site</h1>
+			<h2>Welcome!</h2>
 		</header>
-		
-		<!-- page content -->
+	
+	<p> My name is Sean Murphy. I am from West Des Moines, Iowa and have previously lived in Florida, California, and Maryland.
+	Currently, I live in Coralville, Iowa were I am attending the University of Iowa studying Business Analytics and Information Systems
+	at the Tippie College of Business. After high school I served in the U.S. Navy from 2011 - 2018 as an <a href="https://www.navy.com/careers/information-systems-technician" target="new">Information Systems Technician</a>
+	where I worked as a Systems Administrator and Radio Technician. During this time I gained valuable first hand experience working with a 
+	wide range of applications and programs including Microsoft Server, Linux, Oracle DB, and more. The most rewarding aspect of serving in the Navy 
+	was working along side highly talented individuals from all walks of life to accomplish a common goal as well as being able to travel the world 
+	in the process.
+	<br />
+	In May 2022 I will be graduating from the Tippie College of Business and moving to the Minneapolis - Saint Paul area were I seek to bring my 
+	experience and skills to an exciting career. I believe in being a lifelong learner and am looking forward to expanding my skillset in addition 
+	to professional development. A fun fact about me is that I love animals as you can see in my picture at a local animal sanctuary!</p>
+	
+	
+	<img src="C:\Users\Sean\Desktop\smurphy11_HW6\goat.jpg" width="215" height="285" />
+	<br>
+	<p>Learn more about my <a href="secondPage.html">interests</a>.</p>
 		
 	</body>
 
