--- a/secondPage.html
+++ b/secondPage.html
@@ -3,12 +3,54 @@
 
 	<head>
 		<meta charset="utf-8">
+		<link rel="sytlesheet" type="text/css" href="style.css" />
 		<title> Sean Murphy </title>
 	</head>
 	
 	<body>
-		<h1>Second Page</h1>
-		<a href="index.html"> Main Page </a>
+		<header>
+			<h1>My Interests</h1>
+		</header>
+		
+		<a href="index.html">Go Back to Main Page</a>
+		<br>
+		<br>
+		<img src="C:\Users\Sean\Desktop\smurphy11_HW6\jordan.jpg" width="480" height="360" />
+		<br>
+		<h3>Traveling</h3>
+		<p>I've always loved traveling and experiencing new places in the world. While in the Navy I had the opportunity to visit 
+		many countries including Australia (Darwin), Bahrain, Indonesia, United Arab Emirates (Dubai & Abu Dhabi), Hong Kong, and Jordan. The picture above is when 
+		I visited Jordan in 2013, as you can see I had a great time! There are also many other countries I hope to visit in the near future, including:
+		<ul>
+			<li>United Kingdom</li>
+			<li>Thailand</li>
+			<li>Spain</li>
+			<li>Germany</li>
+			<li>South Korea</li>
+			<li>Italy</li>
+		</ul>
+		</p>
+		<br>
+		<br>
+		<h3>Sports</h3>
+		<p>My Favorite Sports Teams:</p>
+		<table>
+			<tr>
+				<th>Baseball</th>
+				<th>Football</th>
+				<th>Hockey</th>
+			</tr>
+			<tr>
+				<td>Chicago Cubs</td>
+				<td>Kansas City Chiefs</td>
+				<td>Chicago Blackhawks</td>
+			</tr>
+			<tr>
+				<td>Washington Nationals</td>
+				<td>Minnesota Vikings</td>
+				<td>Minnesota Wild</td>
+			</tr>
+		</table>
 
 		
 	</body>
