Edits to CSS class and updated html accordingly

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 
 	<head>
+		<link rel="stylesheet" type="text/css" href="style.css" />
 		<meta charset="utf-8">
-		<link rel="sytlesheet" type="text/css" href="style.css" />
 		<title> Sean Murphy </title>
 	</head>
 	
@@ -31,6 +31,5 @@
 	<p>Learn more about my <a href="secondPage.html">interests</a>.</p>
 		
 	</body>
-
 
 </html>
