--- a/secondPage.html
+++ b/secondPage.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
 
 	<head>
+		<link rel="stylesheet" type="text/css" href="style.css" />
 		<meta charset="utf-8">
-		<link rel="sytlesheet" type="text/css" href="style.css" />
 		<title> Sean Murphy </title>
 	</head>
 	
 	<body>
 		<header>
-			<h1>My Interests</h1>
+			<h1><span class="first-letter">M</span>y Interests</h1>
 		</header>
 		
 		<a href="index.html">Go Back to Main Page</a>
