Corrected image issues

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	to professional development. A fun fact about me is that I love animals as you can see in my picture at a local animal sanctuary!</p>
 	
 	
-	<img src="C:\Users\Sean\Desktop\smurphy11_HW6\goat.jpg" width="215" height="285" />
+	<img src="C:/Users/Sean/Desktop/smurphy11_HW6/goat.jpg" width="215" height="285" alt="Petting a Goat" />
 	<br>
 	<p>Learn more about my <a href="secondPage.html">interests</a>.</p>
 		
