--- a/secondPage.html
+++ b/secondPage.html
@@ -15,10 +15,10 @@
 		<a href="index.html">Go Back to Main Page</a>
 		<br>
 		<br>
-		<img src="C:\Users\Sean\Desktop\smurphy11_HW6\jordan.jpg" width="480" height="360" />
+		<img src="C:/Users/Sean/Desktop/smurphy11_HW6/jordan.jpg" width="480" height="360" alt="In Jordan"/>
 		<br>
 		<h3>Traveling</h3>
-		<p>I've always loved traveling and experiencing new places in the world. While in the Navy I had the opportunity to visit 
+		I've always loved traveling and experiencing new places in the world. While in the Navy I had the opportunity to visit 
 		many countries including Australia (Darwin), Bahrain, Indonesia, United Arab Emirates (Dubai & Abu Dhabi), Hong Kong, and Jordan. The picture above is when 
 		I visited Jordan in 2013, as you can see I had a great time! There are also many other countries I hope to visit in the near future, including:
 		<ul>
@@ -29,7 +29,6 @@
 			<li>South Korea</li>
 			<li>Italy</li>
 		</ul>
-		</p>
 		<br>
 		<br>
 		<h3>Sports</h3>
