edits to photos

--- a/secondPage.html
+++ b/secondPage.html
@@ -15,7 +15,7 @@
 		<a href="index.html">Go Back to Main Page</a>
 		<br>
 		<br>
-		<img src="C:/Users/Sean/Desktop/smurphy11_HW6/jordan.jpg" width="480" height="360" alt="In Jordan"/>
+		<img src="/jordan.jpg" width="480" height="360" alt="In Jordan"/>
 		<br>
 		<h3>Traveling</h3>
 		I've always loved traveling and experiencing new places in the world. While in the Navy I had the opportunity to visit 
